# cpp26-systems-stack

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  Makefile  README.md
.github/workflows/: ci.yml
benchmarks/: bench_queues.cpp
cmake/toolchains/: README.md  aarch64-linux-gnu.cmake.example  osx-arch.cmake.example  x86_64-linux-gnu.cmake.example
docs/: WIKI.md  clion.md
docs/blueprint/: 01-hardware-os.md  02-network-ingress.md  03-memory.md  04-concurrency.md  05-compiler.md  06-telemetry.md  07-industry-libraries.md  AUDIT.md  LOW_LATENCY_STACK.md  README.md
docs/libraries/: README.md  asio.md  beast.md  folly.md  grpc-protobuf.md  hpx.md  simdjson.md  stdexec.md  taskflow.md  tbb.md
docs/tutorials/: hdrhistogram-c.md  industry-stack.md  kernel-bypass-lab.md  linux-numa-uring.md  modern-cpp-tooling-arm-intel.md  ninja-build.md  sbe-codegen.md
examples/arena/: main.cpp
examples/hdr/: main.cpp
examples/hdr_c/: main.cpp
examples/industry_queues/: main.cpp
examples/kernel_bypass/: main.cpp
examples/memory_order/: main.cpp
examples/numa_uring/: main.cpp
examples/pmr/: main.cpp
examples/sbe_codegen/: main.cpp
examples/sbe_style/: main.cpp
examples/spsc/: main.cpp
examples/struct_pack/: main.cpp
examples/tsc/: main.cpp
include/ll/: affinity.hpp  arena.hpp  branch.hpp  cache_line.hpp  hdr_c.hpp  hdr_histogram.hpp  industry.hpp  jemalloc_util.hpp  kernel_bypass.hpp  linux_numa.hpp  linux_uring.hpp  pmr_arena.hpp  sbe_codec.hpp  sbe_style.hpp  spsc_queue.hpp  struct_pack_tick.hpp  tsc_clock.hpp
proto/: smoke.proto
schemas/: sbe-market-data-schema.xml  tick.fbs
scripts/: generate_sbe.sh  install_hpx.sh  publish_wiki.py
scripts/ci/linux_roadmap/: CMakeLists.txt
src/: folly_compat.hpp  main.cpp
tests/: test_beast_asio.cpp  test_folly.cpp  test_gtest_smoke.cpp  test_hpx.cpp  test_industry_stack.cpp  test_libs.cpp  test_ll_modules.cpp  test_roadmap_stack.cpp  test_taskflow.cpp
tools/: ide_index.cpp
